--- a/style.css
+++ b/style.css
@@ -1,57 +1,63 @@
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
-* {
+*{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 	text-decoration: none;
 }
 
-body {
+
+body{
 	scroll-behavior: smooth;
 	text-rendering: optimizeSpeed;
 	background: #FFFFFF;
 }
 
-img {
+
+img{
 	display: block;
 	max-width: 100%;
 }
 
-.container {
+
+.container{
 	width: 1146px;
 	margin: 0 auto;
 }
 
-header {
+
+header{
     margin-bottom: 82.71px;
     margin-top: 40px;
 }
 
+
 .header__wrapper{
     display: flex;
-    align-items: center;
-    
+    align-items: center;   
 }
+
 
 .pic1{
     flex-shrink: 0;
     margin-right: 14px;
-
-
-
 }
 
-h4{color: #F25822;
+
+h2{
+    color: #F25822;
     font-family: Gilroy-Bold;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     margin-right: 500px;
-
 }
-h5{color: #000;
+
+
+h1{
+    color: #000;
     font-family: Gilroy-Bold;
     font-size: 24px;
     font-style: normal;
@@ -59,53 +65,56 @@ h5{color: #000;
     line-height: normal;
 }
 
-.navigation {
 
+.navigation{
     width: 533px;
     height: 17px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
+
 .iconka{
-    width: 6px;
-    height: 3px;
     flex-shrink: 0;
-    margin-top: 7px;
+    display: inline; 
 }
-.link {
+
+.link{
     font-family: 'Gilroy-Medium';
     font-size: 14px;
     line-height: 16px;
     color: #000000;
-    margin-bottom: 89px;
-   
+    margin-bottom: 89px;   
 }
-.navigation a:hover {
 
+
+.navigation a:hover{
     color: #F25822;
 }
 
-.select_nav {
+
+.select_nav{
 	border: none;
 	position: relative;
-	outline: none;	
-    
+	outline: none;	   
 }
 
-main {
+
+main{
     margin-bottom: 162px;
     margin-top: 89px;
 }
 
-.main__content {
+
+.main__content{
     display: flex;
     justify-content: space-between;
     gap: 39px;
 }
 
 
-.big-title {
+.big-title{
     font-family: 'Gilroy-Bold';
     font-size: 60px;
     line-height: 70px;
@@ -115,7 +124,8 @@ main {
     margin-bottom: 17px;
 }
 
-.text {
+
+.text{
     font-family: 'Gilroy-Medium', sans-serif;
     font-size: 20px;
     line-height: 23px;
@@ -126,6 +136,7 @@ main {
     margin-bottom: 37px;
 }
 
+
 .btns-list{
     width: 302px;
     height: 50px;
@@ -133,6 +144,7 @@ main {
     display: flex;
     gap: 70px;
 }
+
 
 .btn{
     width: 180px;
@@ -151,6 +163,7 @@ main {
     cursor: pointer;
 }
 
+
 .btn1{
     width: 140px;
     height: 50px;
@@ -165,6 +178,7 @@ main {
     cursor: pointer;
 }
 
+
 .img-right{
     width: 544.814px;
     height: 374.843px;
@@ -174,10 +188,294 @@ main {
 
 
 .logos{
-
     display: flex;
     width: 1170px;
     justify-content: space-between;
     padding-top: 100px;
     padding-bottom: 100px;
+}
+
+
+.Frame2{
+    width: 1920px;
+    height: 540px;
+    flex-shrink: 0;
+
+    display: flex;
+    background: #FAFAFA;
+}
+
+
+.blockText2{   
+    width: 515px;
+    height: 289px;
+    flex-shrink: 0;
+    margin-left: 374px;
+    margin-top: 82px;
+}
+
+
+h3{
+    font-family: 'Gilroy-Bold';
+    font-size: 60px;
+    line-height: 70px;
+    color: #000000;
+    width: 522px;
+    margin-bottom: 20px;    
+}
+
+
+h4{
+    width: 570px;
+    height: 80px;
+    flex-shrink: 0;
+
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; 
+
+    margin-bottom: 51px;
+}
+
+
+.btn3{
+    border-radius: 50px;
+    background: #F25822;
+    width: 140px;
+    height: 50px;
+    flex-shrink: 0;
+    border: none;
+
+    cursor: pointer;
+
+    color: #FFF;
+    font-family: Gilroy-Bold;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+
+.Macbook{
+    width: 544.814px;
+    height: 374.843px;
+    flex-shrink: 0;
+    margin-top: 82px;
+    margin-left: 135px;
+}
+
+
+.Frame3{
+    width: 1915px;
+    height: 491px;
+    flex-shrink: 0;
+}
+
+
+.Features{   
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: grid;
+    grid-template-columns: repeat(3, 370px);
+    justify-content: center;
+    justify-items: center;
+    gap: 64px;
+
+    margin-top: 140px;
+    margin-bottom: 125px;
+}
+
+
+.Features_Icon{
+    width: 70px;
+    height: 70px;
+    flex-shrink: 0;
+    margin-bottom: 25px;
+}
+
+
+.Features_Title{
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+    margin-bottom: 17px;
+}
+
+
+.Features_par1{
+    width: 310px;
+    height: 42px;
+    flex-shrink: 0;
+
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; 
+
+    margin-bottom: 25px;
+}
+
+
+.Features_par2{
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; 
+}
+
+
+.Features2{
+    width: 370px;
+    height: 291px;
+    flex-shrink: 0;
+
+    margin-left: 775px;
+    margin-right: 700px;
+
+    background: #FFF;
+    box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+}
+
+
+.Frame4{
+    width: 1920px;
+    height: 919px;
+    flex-shrink: 0;
+    background: #FAFAFA;
+}
+
+
+.title{
+    padding: 40px 30px 25px 30px;
+    display: grid;
+    align-items: center;
+    justify-items:center;
+    gap: 19px;
+}
+
+
+.title_big{
+    margin-top: 25px;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;    
+}
+
+
+.title_par{
+    width: 682px;
+    height: 48px;
+    flex-shrink: 0;
+
+    color: #666;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+
+.Services_block{
+    margin-top: 55px;
+    display: grid;
+    grid-template-columns: repeat(3, 370px);
+    justify-content: center;
+    gap: 30px; 
+    background: #FFF;
+    width: 370px;
+    height: 549px;
+}
+
+
+.Services1{    
+    background: #FFF;
+    width: 370px;
+    height: 549px;
+
+}
+
+.Services2{
+    background: #FFF;
+    box-shadow: 15px 25px 60px -5px rgba(0, 0, 0, 0.10);
+}
+
+
+.Services3{
+    background: #FFF;
+    width: 370px;
+    height: 549px;
+}
+
+
+.Services_Title{
+    font-family: Gilroy-Bold;
+
+    margin-top: 25px;
+    font-size: 24px;
+    line-height: 28px;
+
+    margin-bottom: 27px;
+    display: grid;
+    justify-items: center;
+}
+
+.Services_pic{
+    width: 385px;
+    height: 259px;
+    flex-shrink: 0;
+}
+
+.Services_par{ 
+    width: 310px;
+    flex-shrink: 0;
+    
+    color: #AAA;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; 
+
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.btn4{
+    border-radius: 50px;
+    background: #F25822;
+    width: 140px;
+    height: 50px;
+    border: none;
+
+    cursor: pointer;
+
+    color: #FFF;
+    font-family: Gilroy-Bold;
+    font-size: 15px;
+   
+    margin-left: 100px;
+    margin-right: 120px;
+    margin-top: 39px;
+    margin-bottom: 50px;
 }
